# port-pilot

./: .README.md.w4.swp  Cargo.toml  README.md  README.md.w4
docs/: guide.html
scripts/: build-release-binaries.sh  verify.sh
src/: cli.rs  lib.rs  main.rs  model.rs  output.rs  tui.rs
src/inspect/: mod.rs
tests/: cli.rs
