[package]
name = "ports"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crossterm = "0.28"
listeners = "0.2"
open = "5.3"
owo-colors = "4.1"
ratatui = "0.29"
serde_json = "1.0"
sysinfo = "0.37"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
